@@ -33,7 +33,6 @@ import org.junit.Before;
 import org.mockito.Mockito;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -75,27 +74,27 @@ public class IndexLifecycleInfoTransportActionTests extends ESTestCase {
         indexPolicies.put("index_3", policy1Name);
         indexPolicies.put("index_4", policy1Name);
         indexPolicies.put("index_5", policy3Name);
-        LifecyclePolicy policy1 = new LifecyclePolicy(policy1Name, Collections.emptyMap());
+        LifecyclePolicy policy1 = new LifecyclePolicy(policy1Name, Map.of());
         policies.add(policy1);
-        PolicyStats policy1Stats = new PolicyStats(Collections.emptyMap(), 4);
+        PolicyStats policy1Stats = new PolicyStats(Map.of(), 4);
 
         Map<String, Phase> phases1 = new HashMap<>();
         LifecyclePolicy policy2 = new LifecyclePolicy(policy2Name, phases1);
         policies.add(policy2);
-        PolicyStats policy2Stats = new PolicyStats(Collections.emptyMap(), 0);
+        PolicyStats policy2Stats = new PolicyStats(Map.of(), 0);
 
-        LifecyclePolicy policy3 = new LifecyclePolicy(policy3Name, Collections.emptyMap());
+        LifecyclePolicy policy3 = new LifecyclePolicy(policy3Name, Map.of());
         policies.add(policy3);
-        PolicyStats policy3Stats = new PolicyStats(Collections.emptyMap(), 1);
+        PolicyStats policy3Stats = new PolicyStats(Map.of(), 1);
 
         ClusterState clusterState = buildClusterState(policies, indexPolicies);
         Mockito.when(clusterService.state()).thenReturn(clusterState);
 
         ThreadPool threadPool = mock(ThreadPool.class);
         TransportService transportService = MockUtils.setupTransportServiceWithThreadpoolExecutor(threadPool);
-        var usageAction = new IndexLifecycleUsageTransportAction(transportService, null, threadPool, mock(ActionFilters.class), null);
+        var usageAction = new IndexLifecycleUsageTransportAction(transportService, null, threadPool, mock(ActionFilters.class));
         PlainActionFuture<XPackUsageFeatureResponse> future = new PlainActionFuture<>();
-        usageAction.masterOperation(null, null, clusterState, future);
+        usageAction.localClusterStateOperation(null, null, clusterState, future);
         IndexLifecycleFeatureSetUsage ilmUsage = (IndexLifecycleFeatureSetUsage) future.get().getUsage();
         assertThat(ilmUsage.enabled(), equalTo(true));
         assertThat(ilmUsage.available(), equalTo(true));
@@ -110,7 +109,7 @@ public class IndexLifecycleInfoTransportActionTests extends ESTestCase {
 
     private ClusterState buildClusterState(List<LifecyclePolicy> lifecyclePolicies, Map<String, String> indexPolicies) {
         Map<String, LifecyclePolicyMetadata> lifecyclePolicyMetadatasMap = lifecyclePolicies.stream()
-            .map(p -> new LifecyclePolicyMetadata(p, Collections.emptyMap(), 1, 0L))
+            .map(p -> new LifecyclePolicyMetadata(p, Map.of(), 1, 0L))
             .collect(Collectors.toMap(LifecyclePolicyMetadata::getName, Function.identity()));
         IndexLifecycleMetadata indexLifecycleMetadata = new IndexLifecycleMetadata(lifecyclePolicyMetadatasMap, OperationMode.RUNNING);
 
