@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.net.DatagramSocket;
 import java.net.InetAddress;
 import java.net.ServerSocket;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.AccessController;
@@ -154,7 +153,7 @@ public class SimpleKdcLdapServer {
             + "admin_pw=secret\n"
             + "base_dn="
             + baseDn;
-        Files.write(this.workDir.resolve("backend.conf"), backendConf.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(this.workDir.resolve("backend.conf"), backendConf);
         assert Files.exists(this.workDir.resolve("backend.conf"));
     }
 
